--- a/Spider/Spider/Spider.vcxproj
+++ b/Spider/Spider/Spider.vcxproj
@@ -115,7 +115,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="bloomfilter.h" />
     <ClInclude Include="confparser.h" />
+    <ClInclude Include="crc32.h" />
+    <ClInclude Include="dso.h" />
+    <ClInclude Include="hashs.h" />
+    <ClInclude Include="md5.h" />
+    <ClInclude Include="qstring.h" />
+    <ClInclude Include="sha1.h" />
+    <ClInclude Include="socket.h" />
+    <ClInclude Include="Spider.h" />
+    <ClInclude Include="threads.h" />
+    <ClInclude Include="url.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="bloomfilter.cpp" />
+    <ClCompile Include="Confparser.cpp" />
+    <ClCompile Include="crc32.cpp" />
+    <ClCompile Include="dso.cpp" />
+    <ClCompile Include="hashs.cpp" />
+    <ClCompile Include="md5.cpp" />
+    <ClCompile Include="qstring.cpp" />
+    <ClCompile Include="sha1.cpp" />
+    <ClCompile Include="socket.cpp" />
+    <ClCompile Include="Spider.cpp" />
+    <ClCompile Include="threads.cpp" />
+    <ClCompile Include="url.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
