--- a/Spider/Spider/Spider.vcxproj
+++ b/Spider/Spider/Spider.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\Users\yakum\Downloads\spider项目代码\src\spider.h" />
     <ClInclude Include="bloomfilter.h" />
     <ClInclude Include="confparser.h" />
     <ClInclude Include="crc32.h" />
@@ -124,11 +125,11 @@
     <ClInclude Include="qstring.h" />
     <ClInclude Include="sha1.h" />
     <ClInclude Include="socket.h" />
-    <ClInclude Include="Spider.h" />
     <ClInclude Include="threads.h" />
     <ClInclude Include="url.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Users\yakum\Downloads\spider项目代码\src\spider.cpp" />
     <ClCompile Include="bloomfilter.cpp" />
     <ClCompile Include="Confparser.cpp" />
     <ClCompile Include="crc32.cpp" />
@@ -138,7 +139,6 @@
     <ClCompile Include="qstring.cpp" />
     <ClCompile Include="sha1.cpp" />
     <ClCompile Include="socket.cpp" />
-    <ClCompile Include="Spider.cpp" />
     <ClCompile Include="threads.cpp" />
     <ClCompile Include="url.cpp" />
   </ItemGroup>
